# daz-studio

./: .gitignore  Cargo.toml  README.md  cargo-nix  shell.nix
data/sampler-presets/Daz-Funk/: preset.json
data/sampler-presets/Daz-Kit/: preset.json
data/sampler-presets/Daz-Special/: preset.json
daz-studio-rpi/: Cargo.toml
daz-studio-rpi/resources/: urls.txt
daz-studio-rpi/src/: main.rs  menu.rs  ui.rs
rasberry-pi-config/new/: compile-fbcp.sh
rasberry-pi-config/new/boot/: config.txt
rasberry-pi-config/old/boot/: config.txt
rasberry-pi-config/old/etc/: rc.local
sampler-presets/Daz-Funk/: preset.json
saves/: GetHigh.daz  Watcher.daz
sequencer/: Cargo.toml
sequencer/src/: adsr.rs  data.rs  decibels.rs  fifoqueue.rs  lib.rs  midimessage.rs  noise.rs  oscillator.rs  preset.rs  processor.rs  sequencer_data.rs  utils.rs
sequencer/src/epiano/: README.txt  epiano.rs  epiano_data.rs  epiano_preset.rs  epiano_preset_bank.rs  epiano_voice.rs  mod.rs
sequencer/src/fx/: mod.rs  reverb.rs
sequencer/src/metronome/: metronome.rs  metronome_voice.rs  mod.rs
sequencer/src/mood/: mod.rs  mood.rs  mood_oscillator.rs  mood_preset.rs  mood_preset_bank.rs  mood_voice.rs  mood_wave.rs  mood_wave_bank.rs
sequencer/src/sampler/: mod.rs  sample.rs  sample_voice.rs  sampler.rs  sampler_preset.rs
sequencer/src/synthesizer/: mod.rs  operator.rs  synthesizer.rs  synthesizer_preset.rs  synthesizervoice.rs
