[package]
name = "daz-studio-rpi"
version = "0.1.0"
edition = "2018"

[dependencies.sdl2]
version = "^0.35.2"
default-features = false
features = ["ttf"]

[dependencies]
midir = "0.8.0"
portaudio = { git = "https://github.com/RustAudio/rust-portaudio.git", branch = "master" }
biquad = "0.4.2"
sequencer = { path = "../sequencer" }

